dismiss team core ok
