# docs/swagger.json
@@ -33,6 +33,30 @@
                 }
             }
         },
+        "/api/team/exit": {
+            "post": {
+                "description": "退出团队",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "3. ExitTeam"
+                ],
+                "summary": "退出团队接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "团队id",
+                        "name": "tid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {}
+                }
+            }
+        },
         "/api/team/join": {
             "post": {
                 "description": "加入团队",
