# internal/controllers/api/team.go
@@ -87,6 +87,13 @@ func JoinTeam(c *gin.Context) {
 }
 
 // ExitTeam 退出团队
+// @Tags 3. ExitTeam
+// @Summary 退出团队接口
+// @Description 退出团队
+// @Produce json
+// @Param tid query string true "团队id"
+// @Success 200
+// @Router /api/team/exit [post]
 func ExitTeam(c *gin.Context) {
 	p := &params.ExitTeamParam{
 		Claims: core.UserInfoPool.Get().(*params.BaseParam),
@@ -107,15 +114,59 @@ func ExitTeam(c *gin.Context) {
 		return
 	}
 
+	// 团队队长不能退团
+	if teamUser.Type == models.TeamUserTypeOwner {
+		core.GResp.Failure(fmt.Errorf("%d", resp.CodeAuth))
+		return
+	}
+
 	if teamUser.Status == models.TeamUserStatusOnline {
-		if err := teamUser.ExitTeam(p); err != nil {
+		if err := teamUser.ExitTeam(p.Tid, p.Claims.ID); err != nil {
 			core.GResp.Failure(err)
 			return
 		}
 	}
 	core.GResp.Success(resp.EmptyData())
 	return
+}
 
+// DismissTeam 解散团队
+// @Tags 4. DismissTeam
+// @Summary 解散团队接口
+// @Description 解散团队
+// @Produce json
+// @Param tid query string true "团队id"
+// @Success 200
+// @Router /api/team/dismiss [post]
+func DismissTeam(c *gin.Context) {
+	p := &params.DismissTeam{
+		Claims: core.UserInfoPool.Get().(*params.BaseParam),
+	}
+
+	// 绑定参数
+	if err := c.ShouldBind(p); err != nil {
+		core.GResp.Failure(err)
+		return
+	}
+
+	teamUser := models.NewTeamUser()
+	if err := teamUser.IsExistJoinTeam(p.Tid, p.Claims.ID); err != nil {
+		core.GResp.Failure(fmt.Errorf("%d", resp.CodeNotTeam))
+		return
+	}
+
+	// 团队队长
+	if teamUser.Type == models.TeamUserTypeOwner {
+		if err := models.NewTeam().DismissTeam(p.Tid); err != nil {
+			core.GResp.Failure(err)
+			return
+		}
+		core.GResp.Success(resp.EmptyData())
+		return
+	}
+
+	core.GResp.Failure(fmt.Errorf("%d", resp.CodeAuth))
+	return
 }
 
 // ReadListTeam 查看团队列表
